--- a/quiz_list/index.css
+++ b/quiz_list/index.css
@@ -19,7 +19,7 @@ body {
     "nav nav nav nav nav nav nav nav nav nav nav nav"
     "con con con con con con con con con con con con"
     "foot foot foot foot foot foot foot foot foot foot foot foot";
-  grid-template-rows: minmax(10%, max-content) 1fr minmax(10%, max-content);
+  grid-template-rows: minmax(10vh, max-content) 1fr minmax(10vh, max-content);
 }
 .csq__header {
   grid-area: nav;
